# mileshope.com

./: .env.example  .gitignore  BLOG_POST_IDEAS.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEPLOY_CHECKLIST.md  FINAL_MIGRATION_REPORT.md  GA4_SETUP.md  NEWSLETTER_SETUP.md  QUICK_SETUP.md  README.md  SYNC_README.md  TAILWIND_MIGRATION.md  TESTING.md  WEEK1-2_TEST_REPORT.md  WEEK2_COMPLETE.md  WEEK2_TEST_REPORT.md  WEEK3_COMPLETE.md  WEEK4_TEST_REPORT.md  build.sh  config.toml  dev.sh  new_post.py  optimize_images.py  sync.py  sync_mcp.py  test-demo.html  test-validation.sh
content/: about.md  contact.md  services.md
content/blog/: 10-signs-you-need-bazi-reading.md  _index.md  bazi-luck-pillars-life-cycles.md  complete-guide-to-bazi.md  daily-spiritual-practices-modern-life.md  elemental-balance-bazi-chart.md  five-elements-bazi-practical-guide.md  how-to-choose-tarot-vs-bazi.md  reading-tarot-intuitively-vs-by-the-book.md  spiritual-self-care-rituals-by-season.md  tarot-spreads-guide.md  technology-and-spirituality-intersection.md  welcome-to-mileshope.md  (+2 more)
docs/: ARCHITECTURE.md  CSS_MODERNIZATION.md  DEPLOYMENT.md  DEPLOY_CHECKLIST.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  NOTION_SYNC.md  PAGES_CHECKLIST.md  README.md  WEEK3_TEST_REPORT.md  WEEK5_TEST_REPORT.md
notion-sync/: .env.example  Cargo.toml  README.md
notion-sync/src/: frontmatter.rs  main.rs  markdown.rs  notion.rs
static/: _headers  _redirects  robots.txt
styles/: base.css  input.css  theme.css  utilities.css
templates/: 404.html  base.html  index.html  page.html  section.html
(+22 files in other folders)
