[package]
name = "notion-sync"
version = "0.1.0"
edition = "2021"
authors = ["Miles Hope"]
description = "Sync blog posts from Notion to Zola"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Notion API
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenv = "0.15"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

# String manipulation (slugify)
slug = "0.1"
